Improve fullscreen on WSL