@@ -5,95 +5,44 @@ import com.formdev.flatlaf.FlatLightLaf;
 
 import javax.swing.*;
 import java.awt.*;
-import java.beans.PropertyChangeListener;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.*;
 import java.util.stream.Stream;
 
-/**
- * Centralized manager for application themes.
- *
- * Modes:
- *   • Auto — detect OS or DE dark mode where available, else use light
- *   • Light — force FlatLightLaf
- *   • Dark  — force FlatDarkLaf
- *
- * After installing the L&F, all open windows are immediately refreshed.
- */
 public final class Theme
 {
-    private Theme()
-    {}
+    private Theme() {}
 
-    /**
-     * Apply Auto theme. It chooses dark or light based on OS or desktop environment.
-     */
     public static void applyAutoTheme(Runnable onThemeChanged)
     {
-        boolean dark = isDarkPreferred();
-        if (dark)
-            applyDarkTheme();
-        else
-            applyLightTheme();
-
-        if (onThemeChanged != null)
-            onThemeChanged.run();
+        if (isDarkPreferred()) applyDarkTheme();
+        else applyLightTheme();
+        if (onThemeChanged != null) onThemeChanged.run();
     }
-    public static void applyAutoTheme()
-    {
-        applyAutoTheme(null);
-    }
+    public static void applyAutoTheme() { applyAutoTheme(null); }
 
-    /**
-     * Force the light theme via FlatLightLaf.
-     */
     public static void applyLightTheme()
     {
         FlatLightLaf.setup();
         refreshAllWindows();
     }
 
-    /**
-     * Force the dark theme via FlatDarkLaf.
-     */
     public static void applyDarkTheme()
     {
         FlatDarkLaf.setup();
         refreshAllWindows();
     }
 
-    /**
-     * Initialize theme on startup and listen for OS/DE theme changes.
-     *
-     * @param mode 0=Auto, 1=Light, 2=Dark
-     */
     public static void initTheme(int mode)
     {
-        // Listen for Windows dark-mode toggle
-        Toolkit.getDefaultToolkit().addPropertyChangeListener(
-                "win.menu.dark",
-                evt ->
-                {
-                    applyAutoTheme();
-                    // Removed problematic updateWindowIcon call here
-                }
-        );
-
-        // Listen for macOS appearance change
-        Toolkit.getDefaultToolkit().addPropertyChangeListener(
-            "apple.awt.application.appearance",
-            evt -> applyAutoTheme()
-        );
-
-        // Listen for GNOME changes via gsettings
-        addDesktopPropertyListener("org.gnome.desktop.interface.color-scheme");
-
-        // Listen for KDE config file changes
+        Toolkit tk = Toolkit.getDefaultToolkit();
+        tk.addPropertyChangeListener("win.menu.dark", evt -> applyAutoTheme());
+        tk.addPropertyChangeListener("apple.awt.application.appearance", evt -> applyAutoTheme());
+        Toolkit.getDefaultToolkit().addPropertyChangeListener("org.gnome.desktop.interface.color-scheme", evt -> applyAutoTheme());
         watchKdeConfig();
 
-        // Apply initial mode
         switch (mode)
         {
             case 1 -> applyLightTheme();
@@ -105,57 +54,40 @@ public final class Theme
     public static boolean isDarkPreferred()
     {
         String os = System.getProperty("os.name").toLowerCase();
-
+        boolean isWSL = os.contains("linux") && System.getenv("WSL_DISTRO_NAME") != null;
         if (os.contains("mac") || os.contains("darwin"))
+            return System.getProperty("apple.awt.application.appearance", "").contains("dark");
+        if (os.contains("win") || isWSL)
         {
-            String appearance = System.getProperty("apple.awt.application.appearance");
-            return appearance != null && appearance.contains("dark");
-        }
-        if (os.contains("win"))
-        {
-            // Try to read Windows registry for AppsUseLightTheme
             try {
-                Process process = Runtime.getRuntime().exec(
-                    new String[] {
-                        "reg", "query",
-                        "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Themes\\Personalize",
-                        "/v", "AppsUseLightTheme"
-                    }
-                );
+                String regExe = isWSL ? "/mnt/c/Windows/System32/reg.exe" : "reg";
+                Process process = Runtime.getRuntime().exec(new String[] {
+                    regExe, "query",
+                    "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Themes\\Personalize",
+                    "/v", "AppsUseLightTheme"
+                });
                 process.waitFor();
                 try (BufferedReader reader = new BufferedReader(
                         new InputStreamReader(process.getInputStream()))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
                         if (line.contains("AppsUseLightTheme")) {
-                            // Example:    AppsUseLightTheme    REG_DWORD    0x0
                             String[] parts = line.trim().split("\\s+");
-                            String valueHex = parts[parts.length - 1];
-                            int value = Integer.decode(valueHex);
-                            return value == 0; // 0 = dark, 1 = light
+                            int value = Integer.decode(parts[parts.length - 1]);
+                            return value == 0;
                         }
                     }
                 }
-            } catch (Exception e) {
-                // fallback below
-            }
-            // fallback: try system property (for IDEs)
-            String theme = System.getProperty("ide.win.menu.dark");
-            return "true".equalsIgnoreCase(theme);
+            } catch (Exception ignored) {}
+            return "true".equalsIgnoreCase(System.getProperty("ide.win.menu.dark"));
         }
-        // On Linux, check GNOME and KDE
-        if (isGnomeDark() || isKdeDark())
-        {
-            return true;
-        }
-        return false;
+        return isGnomeDark() || isKdeDark();
     }
 
     private static void refreshAllWindows()
     {
         JFrame.setDefaultLookAndFeelDecorated(true);
         JDialog.setDefaultLookAndFeelDecorated(true);
-
         for (Window w : Window.getWindows())
         {
             SwingUtilities.updateComponentTreeUI(w);
@@ -165,7 +97,6 @@ public final class Theme
         }
     }
 
-    // GNOME detection via gsettings
     private static boolean isGnomeDark()
     {
         try
@@ -190,14 +121,9 @@ public final class Theme
         }
     }
 
-    // KDE detection via parsing ~/.config/kdeglobals
     private static boolean isKdeDark()
     {
-        Path cfg = Paths.get(
-            System.getProperty("user.home"),
-            ".config",
-            "kdeglobals"
-        );
+        Path cfg = Paths.get(System.getProperty("user.home"), ".config", "kdeglobals");
         if (Files.exists(cfg))
         {
             try (Stream<String> lines = Files.lines(cfg))
@@ -206,39 +132,19 @@ public final class Theme
                 for (String line : (Iterable<String>) lines::iterator)
                 {
                     line = line.trim();
-                    if (line.equals("[General]"))
-                    {
-                        inGeneral = true;
-                    }
+                    if (line.equals("[General]")) inGeneral = true;
                     else if (inGeneral && line.startsWith("ColorScheme="))
-                    {
-                        String cs = line.substring(line.indexOf('=')+1).toLowerCase();
-                        return cs.contains("dark");
-                    }
+                        return line.substring(line.indexOf('=')+1).toLowerCase().contains("dark");
                 }
             }
-            catch (IOException e)
-            {
-                // ignore
-            }
+            catch (IOException ignored) {}
         }
         return false;
     }
 
-    // Listen to gsettings changes on GNOME
-    private static void addDesktopPropertyListener(String property)
-    {
-        PropertyChangeListener l = evt -> applyAutoTheme();
-        Toolkit.getDefaultToolkit().addPropertyChangeListener(property, l);
-    }
-
-    // Watch KDE config file for changes
     private static void watchKdeConfig()
     {
-        Path dir = Paths.get(
-            System.getProperty("user.home"),
-            ".config"
-        );
+        Path dir = Paths.get(System.getProperty("user.home"), ".config");
         try
         {
             WatchService watcher = FileSystems.getDefault().newWatchService();
@@ -253,9 +159,7 @@ public final class Theme
                         for (WatchEvent<?> ev : key.pollEvents())
                         {
                             if ("kdeglobals".equals(ev.context().toString()))
-                            {
                                 applyAutoTheme();
-                            }
                         }
                         key.reset();
                     }
@@ -268,21 +172,17 @@ public final class Theme
             t.setDaemon(true);
             t.start();
         }
-        catch (IOException ignored)
-        {
-            // cannot watch KDE config
-        }
+        catch (IOException ignored) {}
     }
 
-    /**
-    * Load icon variant based on system dark mode preference.
-    *
-    * @param basePath path without "_light" or "_dark", e.g., "/icons/icon.png"
-    * @return the appropriate ImageIcon for the system theme
-    */
     public static ImageIcon loadSystemAwareIcon(String basePath)
     {
         String themedPath = basePath.replace(".png", isDarkPreferred() ? "_dark.png" : "_light.png");
-        return new ImageIcon(Theme.class.getResource(themedPath));
+        java.net.URL url = Theme.class.getResource(themedPath);
+        if (url == null) {
+            System.err.println("Warning: Icon resource not found: " + themedPath);
+            return null;
+        }
+        return new ImageIcon(url);
     }
 }
